tests/NormalTests/paczka1/small_fuzzy/76731013.err
Error in line 3: S594 S631 94,25
Error in line 4: TYMp S594 42,8
Error in line 10: TYMp S536 10,34
Error in line 6: TYMp S145 43,9
